--- a/ToDolistBack/src/main/resources/application.properties
+++ b/ToDolistBack/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=ToDolistBack
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
 
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
