Implementação de serviços task

--- a/ToDolistBack/src/main/resources/application.properties
+++ b/ToDolistBack/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=ToDolistBack
 
 #DataBase
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.username=root
+spring.datasource.password=060305
 spring.datasource.url=jdbc:mysql://localhost:3306/todolist
 
 #JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
